--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon_white.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ThreeJS-Template</title>
-  </head>
-
-  <body>
-    <canvas class="webgl"></canvas>
-    <script type="module" src="/main.js"></script>
-  </body>
-
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+	<style>
+		*{margin:0;padding:0} 
+		canvas{display: block}
+		#container{width: 100vw;height: 100vh}
+    </style>
+</head>
+<body>
+	<div id="container"></div>
+	<script src="js/app.js" type="module"></script>
+</body>
 </html>
