--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       document.documentElement.className = "js";
     </script>
   </head>
-  <body>
+  <body class="top-body">
     <main>
       <div class="ooo"></div>
       <div class="frame">
