フレームのタイトルとタグラインを削除し、ポートフォリオの年を更新。スタイルシートに新しいコンタクトエリアを追加。

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
     <main>
       <div class="ooo"></div>
       <div class="frame">
-        <div class="frame__title"></div>
         <nav class="frame__works">
           <span>Latest works</span>
           <a href="#content-1">Cinema View</a>
@@ -53,9 +52,8 @@
           <a href="#content-4">Metamorph</a>
           <a href="#content-5">Prismatica</a>
         </nav>
-        <div class="frame__tagline"></div>
         <div class="frame__site">K.ETURYO</div>
-        <div class="frame__year">PORTFOLIO@24</div>
+        <div class="frame__year">PORTFOLIO'24</div>
 
         <div class="frame__menu">aboutme</div>
         <div class="frame__links">
