ポートフォリオの作品タイトルを更新し、関連する画像のパスを修正。スタイルシートにテキストの中央揃えを追加。映画館の説明文を日本語に翻訳。

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
           <span>Latest works</span>
           <a href="#content-1">Cinema View</a>
           <a href="#content-2">Web Cam Room</a>
-          <a href="#content-3">Mystic Trails</a>
-          <a href="#content-4">Metamorph</a>
-          <a href="#content-5">Prismatica</a>
+          <a href="#content-3">blender-bake-room</a>
+          <a href="#content-4">3D-Typing-Game</a>
+          <a href="#content-5">Old-My-Portfolio</a>
         </nav>
         <div class="frame__site">K.ETURYO</div>
         <div class="frame__year">PORTFOLIO'24</div>
@@ -117,65 +117,56 @@
             </div>
           </div>
           <div class="content" id="content-3" data-bg="bg-3">
-            <h2 class="content__title">Mystic Trails</h2>
+            <h2 class="content__title">Blender-bake-room</h2>
             <div class="content__img pos-7" data-dir="right">
               <div
                 class="content__img-inner"
-                style="background-image: url(media/7.jpg)"
+                style="
+                  background-image: url(media/blender-bake-room/blender-bake-room-01.png);
+                "
               ></div>
             </div>
             <div class="content__img pos-8" data-dir="bottom">
               <div
                 class="content__img-inner"
-                style="background-image: url(media/8.jpg)"
+                style="
+                  background-image: url(media/blender-bake-room/belnder-bake-room-02.png);
+                "
               ></div>
             </div>
             <div class="content__img pos-9" data-dir="left">
               <div
                 class="content__img-inner"
-                style="background-image: url(media/9.jpg)"
+                style="
+                  background-image: url(media/blender-bake-room/blender-bake-room-03.png);
+                "
               ></div>
             </div>
           </div>
           <div class="content" id="content-4" data-bg="bg-4">
-            <h2 class="content__title">Metamorph</h2>
+            <h2 class="content__title">Typing-Game-3D</h2>
             <div class="content__img pos-10" data-dir="left">
               <div
                 class="content__img-inner"
-                style="background-image: url(media/10.jpg)"
+                style="
+                  background-image: url(media/typing-game-3D/typing-game-3D-01.png);
+                "
               ></div>
             </div>
             <div class="content__img pos-11" data-dir="right">
               <div
                 class="content__img-inner"
-                style="background-image: url(media/11.jpg)"
+                style="
+                  background-image: url(media/typing-game-3D/typing-game-3D-02.png);
+                "
               ></div>
             </div>
             <div class="content__img pos-12" data-dir="right">
               <div
                 class="content__img-inner"
-                style="background-image: url(media/12.jpg)"
-              ></div>
-            </div>
-          </div>
-          <div class="content" id="content-5" data-bg="bg-5">
-            <h2 class="content__title">Prismatica</h2>
-            <div class="content__img pos-13" data-dir="right">
-              <div
-                class="content__img-inner"
-                style="background-image: url(media/13.jpg)"
-              ></div>
-            </div>
-            <div class="content__img pos-14" data-dir="bottom">
-              <div
-                class="content__img-inner"
-                style="background-image: url(media/14.jpg)"
-              ></div>
-            </div>
-            <div class="content__img pos-15" data-dir="right">
-              <div
-                class="content__img-inner"
-                style="background-image: url(media/15.jpg)"
+                style="
+                  background-image: url(media/typing-game-3D/typing-game-3D-03.png);
+                "
               ></div>
             </div>
           </div>
