--- a/work-about-cinemaview.html
+++ b/work-about-cinemaview.html
@@ -51,7 +51,11 @@
         <a href="index.html">Back</a>
       </p>
       <h2>Cinema View</h2>
-      <p>A grid item reveal animation on hover inspired by</p>
+      <p>
+        p>映画館の座席からの見え方を案内することはできないかと考え、架空の映画館をモデルに制作しました。<br />
+        3DモデルはBlenderで作成しWeb用に最適化、blenderでレンダリングした結果をTextureにベイクして表示させました。
+        <br />
+      </p>
       <img src="media/cinema/cinema1.png" alt="" />
       <img src="media/cinema/cinema2.png" alt="" />
       <img src="media/cinema/cinema3.png" alt="" />
